# Primrose

./: .gitignore  CMakeLists.txt  optimisation_ideas.md
LevelEditor/: fps_counter.cpp  fps_counter.hpp  gui.cpp  gui.hpp  imgui.ini  main.cpp  player_movement.cpp  player_movement.hpp
LevelEditor/imgui/: imgui_widgets.cpp
LevelEditor/scenes/: csg.json  csg2.json  example.json  myscene.json  perftest.json  test.json  tmp.json
Primrose/: core.hpp  embed.sh  engine.cpp  engine.hpp  engine_runtime.cpp  engine_runtime.hpp  scene.cpp  scene.hpp  scene.schema.json  shader_structs.cpp  shader_structs.hpp  state.cpp  state.hpp  ui.hpp  ui_element.cpp  ui_element.hpp  ui_image.cpp  ui_image.hpp  ui_panel.cpp  ui_panel.hpp  ui_text.cpp  ui_text.hpp
Primrose/include/Primrose/: core.hpp  log.hpp  scene.hpp  shader_structs.hpp  state.hpp
Primrose/include/Primrose/engine/: pipeline_accelerated.hpp  pipeline_raster.hpp  runtime.hpp  setup.hpp
Primrose/include/Primrose/scene/: aabb.hpp  construction_node.hpp  node.hpp  node_visitor.hpp  primitive_node.hpp  scene.hpp
Primrose/include/Primrose/ui/: element.hpp  image.hpp  panel.hpp  text.hpp
Primrose/shaders/: buildshader.sh  constants.glsl  csg.frag  csg_notes.frag  csgs.txt  implicit.frag  main.frag  main.vert  march.frag  old.frag  resources.md  resources.txt  sdf.glsl  structs.glsl  ui.frag
Primrose/shaders/accelerated/: main.rahit  main.rchit  main.rgen  main.rint  main.rmiss  payload.glsl
Primrose/shaders/other/: basic.frag  csg.frag  csg_notes.frag  old.frag
Primrose/shaders/raster/: flat.vert  march.frag
Primrose/shaders/ui/: ui.vert
Primrose/src/: log.cpp  scene.cpp  scene_engine.cpp  scene_json.cpp  scene_nodes.cpp  shader_structs.cpp  state.cpp
Primrose/src/engine/: pipeline_accelerated.cpp  pipeline_raster.cpp  runtime.cpp  setup.cpp
Primrose/src/scene/: aabb.cpp  construction_node.cpp  node.cpp  primitive_node.cpp  scene.cpp  shader_structs.cpp
Primrose/src/scene/primitives/: torus_node.cpp
Primrose/src/ui/: element.cpp  image.cpp  panel.cpp  text.cpp
PrimroseDemo/: main.cpp  planet_scene.cpp  planet_scene.hpp
other/: level_ideas.md  optimisation_ideas.md
